--- a/node-development/app/inner-content-page.html
+++ b/node-development/app/inner-content-page.html
@@ -1,123 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,500,600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css" />
-</head>  
+<?php
+	include 'php-includes/global-functions.php';
+	get_header('Inner Content Page');
+?>
 <body> 
-	<?xml version="1.0" encoding="utf-8"?>
-	<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 viewBox="0 0 0 0" class="bc-svg-defs" xml:space="preserve">
-		<defs>
-			<linearGradient id="isd-rainbow-grad" gradientUnits="userSpaceOnUse" x1="0" y1="25.5" x2="1440" y2="25.5">
-				<stop  offset="0" style="stop-color:#05D1D1"/>
-				<stop  offset="0.25" style="stop-color:#6881DB"/>
-				<stop  offset="0.5" style="stop-color:#D02CE5"/>
-				<stop  offset="0.75" style="stop-color:#F2EF11"/>
-				<stop  offset="1" style="stop-color:#3B857E"/>
-			</linearGradient>	
-			<linearGradient id="linear-gradient" class="bc-svg-defs__linear-gradient" viewBox="0 0 100 100" gradientTransform="rotate(135)">
-				<stop offset="0%" stop-opacity="1"  class="bc-svg-defs__linear-gradient__col-stop1"/> 
-				<stop offset="72%" stop-opacity="1" class="bc-svg-defs__linear-gradient__col-stop2"/>
-			</linearGradient>
-			<linearGradient id="linear-gradient--orange" class="bc-svg-defs__linear-gradient--orange" viewBox="0 0 100 100" gradientTransform="rotate(135)">
-				<stop offset="0%" stop-opacity="1"  class="bc-svg-defs__linear-gradient__col-stop1"/> 
-				<stop offset="72%" stop-opacity="1" class="bc-svg-defs__linear-gradient__col-stop2"/>
-			</linearGradient>
-		</defs>
-	</svg>
-	<header class="bc-site-header is-overlay">
-		<div class="bc-site-header__content">
-			<div class="bc-site-header__logo">
-				<img src="media/isd-logo.png" alt="International School of Dublin" class="">					
-			</div>
-			<nav class="bc-main-navigation"> 
-				<h1 class="bc-site-header__heading">Welcome to International School of Dublin</h1>
-				<div class="bc-main-navigation__navs">
-					<div class="bc-main-navigation__main-nav">
-						<ul class="bc-main-navigation__links">
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Teaching &amp; Learning</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Admissions</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">About the School</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Student experience</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Community</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">For Irish families</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Contact</a></li>
-						</ul>		
-					</div>
-
-					<div class="bc-main-navigation__sub-navigation"> 
-						<h3 class="bc-site-header__sub-sub-heading">Quick links</h3>
-						<ul class="bc-main-navigation__links">
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">School calendar</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">School bus</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Student experience</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Community</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">For Irish families</a></li>
-							<li class="bc-main-navigation__item"><a class="bc-main-navigation__item__link" href="javascript:void(0)">Contact</a></li>
-						</ul>	
-					</div>
-				</div>
-			</nav>
-			<div class="bc-main-navigation-toggle">
-				<a href="javascript:void(0)" class="bc-navigation-toggle">
-					<?xml version="1.0" encoding="utf-8"?>
-					<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-					<svg version="1.1" class="bc-menu-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-						 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-							<line class="bc-menu-icon__icon__line bc-menu-icon__icon__line--top" fill="none" stroke="#000000" stroke-width="6" stroke-miterlimit="10" x1="1" y1="25" x2="99" y2="25"/> 
-							<line class="bc-menu-icon__icon__line bc-menu-icon__icon__line--middle" fill="none" stroke="#000000" stroke-width="6" stroke-miterlimit="10" x1="1" y1="50" x2="99" y2="50"/>
-							
-							<line class="bc-menu-icon__icon__line bc-menu-icon__icon__line--bottom" fill="none" stroke="#000000" stroke-width="6" stroke-miterlimit="10" x1="1" y1="77.5" x2="99" y2="77.5"/>
-					</svg>
-				</a>
-			</div><!-- // .bc-main-navigation-toggle -->
-		</div>
-		<div class="bc-main-navigation__underlay"></div>
-	</header>
-	<section class="bc-inner-page-header bc-content-section has-inner-sub-nav">   
-		<div class="bc-inner-page-header__bg-svg">
-			<svg class="families-svg" viewbox="0 0 100 100">
-				<use xlink:href="media/svg/images/families.svg#familiy_3"></use> 
-			</svg>
-		</div>
-		<div class="bc-elipses"> 
-			<svg class="bc-elipses__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 280">
-				<!-- fill:url(#linear-gradient) --> 
-				<circle class="bc-elipses__elipse" /> 
-				<circle class="bc-elipses__elipse" />
-				<circle class="bc-elipses__elipse" /> 
-				<circle class="bc-elipses__elipse" /> 
-				<circle class="bc-elipses__elipse" /> 
-			</svg>
-		</div>
-		<div class="bc-inner-page-header__content">
-			<h1 class="bc-inner-page-header__heading">Learning</h1>
-			<h2 class="bc-inner-page-header__sub-heading">Be part of the progress</h2>
-			<nav class="bc-inner-page-header__sub-nav">
-				<div class="bc-inner-page-header__sub-nav__toggle"> 
-					<h3 class="bc-inner-page-header__sub-nav__toggle__label">More about Teaching &amp; Learning:</h3> 
-					<a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__toggle__icon"> 
-						<svg class="bc-svg-icon" viewbox="0 0 100 100">
-							<use xlink:href="./media/svg/icons/bc-svgs.svg#carat"></use> 	
-						</svg>
-					</a>	
-				</div>
-				
-				<ul class="bc-inner-page-header__sub-nav__links is-floating-nav"> 
-					<li class="bc-inner-page-header__sub-nav__item"><a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__link">Sub-section #1</a></li>
-					<li class="bc-inner-page-header__sub-nav__item"><a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__link">Sub-section #2</a></li>
-					<li class="bc-inner-page-header__sub-nav__item"><a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__link">Sub-section #3</a></li>
-					<li class="bc-inner-page-header__sub-nav__item"><a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__link">Sub-section #4</a></li>
-					<li class="bc-inner-page-header__sub-nav__item"><a href="javascript:void(0)" class="bc-inner-page-header__sub-nav__link">Sub-section #5</a></li>
-				</ul>
-			</nav>
-		</div><!-- // .bc-innerpage-header__content -->
-	</section><!-- // .bc-innerpage-header -->
+	<?php get_site_header(true); ?>
 	<nav class="bc-breadcrumbs">
 		<div class="bc-breadcrumbs__wrap">
 			<ul class="bc-breadcrumbs__links">
@@ -400,7 +286,7 @@
 			</div><!-- // .bc-accordion -->
 		</div><!-- // .bc-inner-page-content__content -->
 	</section><!-- // .bc-inner-page-content Frequently asked questions-->
-	<nav class="bc-section-navigation has-shade-02 has-inset-shadow">
+	<nav class="bc-section-navigation has-shade-02 has-brand-darker-background">
 		<div class="bc-section-navigation__content">
 			<h1 class="bc-section-navigation__heading">More about Teaching &amp; Learning</h1>
 			<ul class="bc-section-navigation__links"> 
